--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.0
+  sdk: '>=3.2.3 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -32,24 +32,40 @@ dependencies:
     sdk: flutter
 
   # Core dependencies
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.2
   camera: ^0.10.5+9
   image: ^4.1.7
   path_provider: ^2.1.2
   permission_handler: ^11.3.0
   image_picker: ^1.0.7
+  shared_preferences: ^2.2.2  # For persisting settings
   
   # State management and navigation
-  flutter_riverpod: ^2.4.10
-  go_router: ^13.2.0
+  flutter_riverpod: ^2.4.9
+  go_router: ^13.1.0
   
   # UI components
   flutter_svg: ^2.0.10+1
   smooth_page_indicator: ^1.1.0
   tflite_flutter: ^0.11.0
+  connectivity_plus: ^5.0.2
+  flutter_markdown: ^0.6.18
+  intl: ^0.19.0
+  flutter_animate: ^4.5.0
+  flutter_chat_ui: ^1.6.10
+  flutter_chat_types: ^3.6.2
+  ms_undraw: ^4.0.0
+  scroll_to_index: ^3.0.1
+
+  # Gemini Chatbot
+  google_generative_ai: ^0.2.0
+  flutter_dotenv: ^5.1.0 # For API key management
+  http: ^1.2.0  # For API calls
   
   # LLM Chat functionality
-  chat_bot_llm: ^0.0.8-prerelease.4
+  # chat_bot_llm: ^0.0.8-prerelease.4  # Removed as we have our own implementation
+  lottie: ^3.0.0
+  dynamic_color: ^1.6.2
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +76,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -74,7 +90,8 @@ flutter:
     - assets/images/
     - assets/images/undraw/
     - assets/images/category_icons/
-    - assets/sounds/
+    - assets/animations/
+    - .env  # Environment variables file
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -101,3 +118,19 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Inter-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Inter-SemiBold.ttf
+          weight: 600
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Roboto-Medium.ttf
+          weight: 500
