--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   permission_handler: ^11.3.0
   image_picker: ^1.0.7
   shared_preferences: ^2.2.2  # For persisting settings
+  tflite_flutter: ^0.11.0
+  url_launcher: ^6.2.4  # For opening external URLs
   
   # State management and navigation
   flutter_riverpod: ^2.4.9
@@ -47,7 +49,6 @@ dependencies:
   # UI components
   flutter_svg: ^2.0.10+1
   smooth_page_indicator: ^1.1.0
-  tflite_flutter: ^0.11.0
   connectivity_plus: ^5.0.2
   flutter_markdown: ^0.6.18
   intl: ^0.19.0
@@ -86,8 +87,8 @@ flutter:
   uses-material-design: true
   
   assets:
-    - assets/models/
     - assets/images/
+    - assets/models/
     - assets/images/undraw/
     - assets/images/category_icons/
     - assets/animations/
@@ -118,19 +119,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
-
-  fonts:
-    - family: Inter
-      fonts:
-        - asset: assets/fonts/Inter-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/Inter-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/Inter-SemiBold.ttf
-          weight: 600
-    - family: Roboto
-      fonts:
-        - asset: assets/fonts/Roboto-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/Roboto-Medium.ttf
-          weight: 500
